<resources>
    <string name="app_name">Projekt_Spotify</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="album_title_pocztowka">POCZTÓWKA</string>
    <string name="album_title_marmur">Marmur</string>
    <string name="artist_name_quebonafide">Quebonafide</string>
    <string name="artist_name_taco">Taco Hemingway</string>
    <string name="artist_name_asap">A$AP ROCKY</string>
    <string name="album_title_utopia">UTOPIA</string>
    <string name="album_title_irl">in real life</string>
    <string name="artist_name_kendrick">Kendrick Lamar</string>
    <string name="music_name_main_stage">Main Stage Freestyle</string>
    <string name="music_title_main">Main Stage</string>
    <string name="artist_name_taco2">Taco</string>
    <string name="music_name_goosebumps">goosebumps</string>
    <string name="artist_name_travis_scot2">Travis</string>
    <string name="type_single">Single</string>
    <string name="song_title_spins">The spins</string>
    <string name="song_name_runaway">Runaway</string>
    <string name="song_title_selfcare">Selfcare</string>
    <string name="album_title_ye">ye</string>
    <string name="song_name_alright">Alright</string>
    <string name="album_title_1800_oswiecenie">1-800</string>
    <string name="type_album">Album</string>
    <string name="album_title_pgs">PG$</string>
    <string name="music_name_sundress">Sundress</string>
    <string name="content_description">Coś</string>
    <string name="title_ostatnio_odtwarzane">Recently played</string>
    <string name="button_title_clear_history">Clear search history</string>
    <string name="album_title_pocztowka_z_wwa">POCZTÓWKA Z WWA, lato \'19</string>
    <string name="last_search">Last search</string>
    <string name="album_title"><![CDATA[Mr. Morale & the Big Steppers]]></string>
    <string name="album_title_swimming">Swimming</string>
    <string name="album_title_dark_fantasy">My Beautiful Dark Twisted Fantasy</string>
    <string name="artist_name_bambi">bambi</string>
    <string name="album_title_live_love">Live. Love. A$AP</string>
    <string name="music_name_famous">Famous</string>
    <string name="music_name_ile_moglem">Ile mogłem</string>
    <string name="artist_name_kuban">Kuban</string>
    <string name="button_follow">Follow</string>
    <string name="monthly_listeners">958 436 monthly listeners</string>
    <string name="verified">Verified artist\n</string>
    <string name="title_popular">Popular</string>
    <string name="music_name_hill_bomb">HILL BOMB</string>
    <string name="music_name_na_okraglo">na okrągło</string>
    <string name="music_name_zmartwienia">same zmartwienia</string>
    <string name="music_name_jak_gdyby">Jak gdyby nic</string>
    <string name="music_name_magister">magister sztuki</string>
    <string name="Follow">Follow</string>
    <string name="Unfollow">Unfollow</string>
    <string name="info_title">Informations</string>
    <string name="info_note_kuba">jak \"chore jazdy\" zmieniły się w \"same zmartwienia\"?</string>
    <string name="latest_title">Popular new releases</string>
    <string name="album_title_spokoj">spokój.</string>
    <string name="album_title_myslisz">Myślisz jeszcze?</string>
    <string name="album_title_dystans">Dystans</string>
    <string name="music_name_jak_nie_wroce">jak nie wróce</string>
    <string name="theme_title">Day/night</string>
</resources>